2006-03-22  Mike Kestner  <mkestner@novell.com>

	* MenuAPI.cs: only process Enter and arrow keypresses if the tracker
	is active. Fixes #77870.

2006-03-22  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: Corrected TabIndex order and set fileNameComboBox
	  to be focused/selected after startup

2006-03-22  Alexander Olk  <alex.olk@googlemail.com>

	* ColorDialog.cs: 
	  - Corrected behaviour of Color, AllowFullOpen, FullOpen,
	    CustomColors and ShowHelp properties
	  - Some internal rewrites to get better results when using the
	    ColorMatrix

2006-03-22  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: hook into Peter's new ResetMouseHover capability to fix
	HoverSelection.  Fixes #77836.

2006-03-22  Mike Kestner  <mkestner@novell.com>

	* FileDialog.cs: bugfixes for the toolbar.  Use PushButtons instead of
	ToggleButtons.  (De)Sensitize the Back button around a stack count of
	1, not 0.  Update ButtonSize based on a pixel count of the win32
	control.  Adjust the toolbar size/location for new button size.

2006-03-22  Jackson Harper  <jackson@ximian.com>

	* XplatUIX11.cs: Don't handle configurenotifys if PostQuitState is
	true.
	* ScrollBar.cs: When doing increments and decrements we need to
	set the Value property so that ValueChanged gets raised. A
	possible optimization here would be to make an internal SetValue
	that doesn't invalidate immediately.
	* ToolTip.cs: Tooltips get added to their container (when
	supplied) so they get disposed when the container is disposed.
	- Don't create tooltips for String.Empty. This prevents all these
	little 2-3 pixel windows from showing up when running nunit-gui
	and driving me mad.
	* Form.cs: Don't set topmost when setting the owner if the handles
	haven't been created yet.  The topmost set will happen when the
	handles are created.

2006-03-22  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs:
	  - DeriveWindowStyles: Fixed typo in borderstyle generation (#77828)